--- a/views/up2.html
+++ b/views/up2.html
@@ -18,7 +18,7 @@
 
 <script type="text/javascript" src ="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/materialize/0.90/css/materialize.min.js"></script>
-<script type="text/javascript" src = "../js/app.js"></script>
+<script type="text/javascript" src = "js/app.js"></script>
 </body>
 </html>
 
