--- a/views/up1.html
+++ b/views/up1.html
@@ -16,7 +16,7 @@
 <div id = "up1"></div>
 <script type="text/javascript" src ="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/materialize/0.90/css/materialize.min.js"></script>
-<script type="text/javascript" src = "../js/app.js"></script>
+<script type="text/javascript" src = "js/app.js"></script>
 
 
 </body>
